# self-study

./: .gitignore  creds.txt  git.txt  pyproject.toml
Hands-On Machine Learning with Scikit-Learn, Keras, and TensorFlow/handson-ml3/: 02_end_to_end_machine_learning_project.ipynb
multiprocess/: fn.py  test.ipynb  tmp_func.py
other/: ra.txt
testing/: .gitignore  pyproject.toml  todo.md
testing/deepseek_solo/: pyproject.toml
testing/deepseek_solo/src/deepseek_solo/: __init__.py  main.ipynb
testing/firecrawl/: pyproject.toml
testing/firecrawl/src/firecrawl/: __init__.py  main.ipynb  publications_summary.md
testing/firecrawl/src/firecrawl/data/: Gender Preferences in Job Vacancies and Workplace Gender Diversity.md  How to Compete with Robots by Assessing Job Automation Risks and Resilient Alternatives.md  Impacts of Covid-19 and policy measures on trade, labor demand, and job finding.md  Inference with Arbitrary Clustering.md  Moral Support and Performance.md  The Effect of Trade on Skill Requirements, Evidence from Job Postings..md  The Role of Firms in Wage Formation, Evidence from Immigration and Local Taxes in Switzerland.md  Unintended Consequences of Money-Laundering Regulations.md  Who Benefits from Support? The Heterogeneous Effects of Supporters on Athletes’ Performance by Skin Color.md  acreg, Arbitrary Correlation Regression.md
testing/interpolation_crew/: README.md  pyproject.toml
testing/interpolation_crew/src/interpolation_crew/: crew.py  main.py
testing/interpolation_crew/src/interpolation_crew/callbacks/: change_task.py
testing/interpolation_crew/src/interpolation_crew/config/: agents.yaml  tasks.yaml
testing/llm_tests/: pyproject.toml
testing/llm_tests/src/llm_tests/: test_deepseek.py  test_groq.py  test_singles.py  testing.ipynb
testing/llm_tests/src/llm_tests/agents/: __init__.py  deepseek_agents.py  groq_agents.py  kickstarter_genre_classifier_agents.py
testing/llm_tests/src/llm_tests/crews/: __init__.py  deepseek_crews.py  groq_crews.py
testing/llm_tests/src/llm_tests/tasks/: __init__.py  chat.py  check_knowledge.py  count_words.py  delegation_tasks.py  kickstarter_genre_classifier_tasks.py
testing/llm_tests/src/llm_tests/tools/: __init__.py  tavily_search_tool.py  word_count_tool.py
testing/simple_hierarchical_crew/: README.md  pyproject.toml  simple_hierarchical_crew_output.md
testing/simple_hierarchical_crew/src/simple_hierarchical_crew/: crew.py  main.py
testing/simple_hierarchical_crew/src/simple_hierarchical_crew/config/: agents.yaml  tasks.yaml
testing/simple_hierarchical_crew/src/simple_hierarchical_crew/tools/: __init__.py  file_io.py  search_tools.py
udemy/Complete web development course - Chitesh Choudhary/: test.html
udemy/Complete web development course - Chitesh Choudhary/chai-backend/: package.json
udemy/Complete web development course - Chitesh Choudhary/css/05_coming_soon/: coming-soon-landing.html  style.css
udemy/Complete web development course - Chitesh Choudhary/css/07_grid/: gridMasterClass.html  gridbasics.html
udemy/Complete web development course - Chitesh Choudhary/css/09_bootstrap/: bootstrap.html
udemy/Complete web development course - Chitesh Choudhary/css/project_card/: card.css  card.html
udemy/Complete web development course - Chitesh Choudhary/express/: index.js  package-lock.json  package.json
udemy/Complete web development course - Chitesh Choudhary/html/: 01_intro.html  02_headings_lists.html  03_tables.html  04_forms.html  05_semantics.html  index.html
udemy/Complete web development course - Chitesh Choudhary/jsfoundation/: hello.js
udemy/Complete web development course - Chitesh Choudhary/jsfoundation/part1/: changes.js  datatype.js  nonPrimitive.js  operations.js  printing.js
udemy/Complete web development course - Chitesh Choudhary/jsfoundation/part4/: arrayChalenges.js  functions.js
udemy/Complete web development course - Chitesh Choudhary/nodejs/: test.js
udemy/Complete web development course - Chitesh Choudhary/nodejs/eventlogger/: eventlog.txt  logger.js
udemy/Complete web development course - Chitesh Choudhary/nodejs/server/: about.html  contact.html  index.html  server.js
udemy/Complete web development course - Chitesh Choudhary/nodejs/todo/: todo.js
udemy/Complete web development course - Chitesh Choudhary/projects/01_toDo_localStorage/: index.html  script.js  style.css
udemy/Complete web development course - Chitesh Choudhary/projects/02_weatherApp/: index.html  script.js  style.css
udemy/Complete web development course - Chitesh Choudhary/projects/03_ecommerce/: index.html  script.js  style.css
udemy/Complete web development course - Chitesh Choudhary/react-course/01_basicreact/: package-lock.json
udemy/Complete web development course - Chitesh Choudhary/vidtube/: package-lock.json  package.json
udemy_langgraph/: .gitignore  git.txt  pyproject.toml  ruff.toml
udemy_langgraph/1_reflection_agent/: .env  chains.py  environment.yml  main.py  pyproject.toml  requirements.txt  test.py
udemy_langgraph/1_reflection_agent/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl
udemy_langgraph/2_reflexion_agent/: .env  chains.py  main.py  pyproject.toml  schemas.py  tool_executor.py
udemy_langgraph/reflection_agent/: chains.py  langgraph.json  main.py  notes.md  pyproject.toml
udemy_langgraph/reflexion_agent/: chains.py  main.py  pyproject.toml  schemas.py  tool_executor.py
(+50 files in other folders)
