[project]
name = "deepseek-solo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "FabianGobet", email = "fabian.mas.slax@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain>=0.3.21",
    "openai>=1.68.2",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
]

[project.scripts]
deepseek-solo = "deepseek_solo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
