[project]
name = "interpolation_crew"
version = "0.1.0"
description = "interpolation_crew using crewAI"
authors = [{ name = "FabianGobet", email = "fabian.mas.slax@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
interpolation_crew = "interpolation_crew.main:run"
train = "interpolation_crew.main:train"
replay = "interpolation_crew.main:replay"
test = "interpolation_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
