[project]
name = "simple_hierarchical_crew"
version = "0.1.0"
description = "simple_hierarchical_crew using crewAI"
authors = [{ name = "FabianGobet", email = "fabian.mas.slax@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai>=0.108.0",
    "langtrace-python-sdk>=3.8.8",
]

[project.scripts]
simple_hierarchical_crew = "simple_hierarchical_crew.main:run"
simple_hierarchical_crew_train = "simple_hierarchical_crew.main:train"
simple_hierarchical_crew_replay = "simple_hierarchical_crew.main:replay"
simple_hierarchical_crew_test = "simple_hierarchical_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
